--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
+    "homepage": "https://Techy-BhaweshPandey.github.io/bhawesh_about",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
