--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "react-scripts": "5.0.1",
-    "homepage": "https://Techy-BhaweshPandey.github.io/bhawesh_about",
+    "homepage": "https://Techy-BhaweshPandey.github.io/bhawesh_about/",
     "web-vitals": "^2.1.4"
   },
   
